kubernetes/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: zuri-frontend
  namespace: zuri-market
  labels:
    app: zuri-frontend
spec:
  selector:
    app: zuri-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
